Draft: User Image Update (#8)
* ADD: update user img feat

* ADD: api docs for user

* REMOVE: route for user image update. ADD: route to update all details of user
