# src/routes/user.ts
@@ -6,5 +6,6 @@ const router: Router = Router({ mergeParams: true });
 
 router.get("/", Controllers.User.getAllUsers);
 router.get("/:id", Controllers.User.getOneUserById);
+router.patch("/", Controllers.User.updateUserDetails);
 
 export default router;
